--- a/FitnessOsnova_Kam_Dav/Pages/AuthPage.xaml
+++ b/FitnessOsnova_Kam_Dav/Pages/AuthPage.xaml
@@ -2,46 +2,64 @@
     x:Class="FitnessOsnova_Kam_Dav.Pages.AuthPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:FitnessOsnova_Kam_Dav.Pages"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="AuthPage"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    Background="White"
-    mc:Ignorable="d">
-
+    Background="#FFFFFF">
     <Grid>
-        <Label
-            Margin="50,50,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Content="Email:" />
-        <TextBox
-            x:Name="EmailTextBox"
-            Width="200"
-            Margin="150,50,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top" />
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Offset="0.0" Color="#E0FFFF" />
+                <GradientStop Offset="1.0" Color="#00BFFF" />
+            </LinearGradientBrush>
+        </Grid.Background>
 
-        <Label
-            Margin="50,100,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Content="Пароль:" />
-        <PasswordBox
-            x:Name="PasswordBox"
-            Width="200"
-            Margin="150,100,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top" />
+        <StackPanel
+            Width="300"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <TextBlock
+                Margin="0,0,0,20"
+                HorizontalAlignment="Center"
+                FontSize="24"
+                FontWeight="Bold"
+                Text="Добро пожаловать!" />
 
-        <Button
-            Width="100"
-            Margin="150,150,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Click="LoginButton_Click"
-            Content="Войти" />
+            <TextBox
+                x:Name="UsernameTextBox"
+                Margin="0,0,0,10"
+                Padding="10"
+                Background="White"
+                Foreground="Black"
+                ToolTip="Введите ваш логин" />
+
+            <PasswordBox
+                x:Name="PasswordBox"
+                Margin="0,0,0,20"
+                Padding="10"
+                Background="White"
+                Foreground="Black"
+                ToolTip="Введите ваш пароль" />
+
+            <Button
+                Margin="0,0,0,10"
+                Padding="10"
+                Background="#00BFFF"
+                Click="LoginButton_Click"
+                Content="Войти"
+                Foreground="White" />
+            <Button
+                Padding="10"
+                Background="#00BFFF"
+                Click="RegisterButton_Click"
+                Content="Регистрация"
+                Foreground="White" />
+
+            <TextBlock
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center"
+                Cursor="Hand"
+                Foreground="#007FFF"
+                MouseDown="ForgotPassword_MouseDown"
+                Text="Забыли пароль?" />
+        </StackPanel>
     </Grid>
 </Page>
