add gym, financial, trainers

--- a/FitnessOsnova_Kam_Dav/Pages/FeedbackPage.xaml
+++ b/FitnessOsnova_Kam_Dav/Pages/FeedbackPage.xaml
@@ -1,63 +1,41 @@
-﻿<Page
-    x:Class="FitnessOsnova_Kam_Dav.Pages.FeedbackPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:FitnessOsnova_Kam_Dav.Classes"
-    Title="Отзывы">
-
-
+﻿<Page x:Class="FitnessOsnova_Kam_Dav.Pages.FeedbackPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      Title="Отзывы">
     <Grid>
-        <TextBlock
-            Margin="10"
-            FontSize="24"
-            FontWeight="Bold"
-            Text="Отзывы" />
-
-        <ListView x:Name="FeedbackListView" Margin="10,50,10,150">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Margin="5">
-                        <TextBlock FontSize="16" Text="{Binding Comment}" />
-                        <TextBlock
-                            FontSize="14"
-                            Foreground="Gray"
-                            Text="{Binding Rating}" />
-                        <TextBlock
-                            FontSize="12"
-                            Foreground="DarkGray"
-                            Text="{Binding FeedbackDate}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-
-        <TextBox
-            x:Name="CommentTextBox"
-            Height="60"
-            Margin="10,220,10,0"
-            VerticalAlignment="Top" />
-        <TextBox
-            x:Name="RatingTextBox"
-            Height="30"
-            Margin="10,290,10,0"
-            VerticalAlignment="Top" />
-        <Button
-            Margin="10,330,10,0"
-            VerticalAlignment="Top"
-            Click="AddFeedbackButton_Click"
-            Content="Добавить отзыв" />
-
-        <TextBlock
-            Margin="10,220,10,0"
-            VerticalAlignment="Top"
-            Foreground="LightGray"
-            IsHitTestVisible="False"
-            Text="Ваш отзыв..." />
-        <TextBlock
-            Margin="10,290,10,0"
-            VerticalAlignment="Top"
-            Foreground="LightGray"
-            IsHitTestVisible="False"
-            Text="Оценка (1-5)..." />
+        <StackPanel Margin="20">
+            <TextBlock FontSize="24" FontWeight="Bold" Text="Отзывы" Margin="0,0,0,20"/>
+            <ListView Name="FeedbackListView" Margin="0,0,0,20">
+                <!-- Здесь будут отображаться отзывы -->
+            </ListView>
+            <StackPanel Margin="0,0,0,10">
+                <TextBox Name="CommentTextBox" Height="100" Margin="0,0,0,0"/>
+                <TextBlock Text="Ваш отзыв..." Foreground="Gray" 
+                           VerticalAlignment="Center" 
+                           Margin="5,0,0,0" 
+                           />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                <TextBlock Text="Оценка:" VerticalAlignment="Center"/>
+                <ItemsControl Name="RatingStars" Margin="5,0,0,0">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button Content="★" FontSize="24" 
+                                    Background="Transparent" 
+                                    Foreground="Gray" 
+                                    Click="StarButton_Click" 
+                                    Tag="{Binding}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
+            <Button Content="Добавить отзыв" Click="AddFeedbackButton_Click" 
+                    Margin="0,10,0,0"/>
+        </StackPanel>
     </Grid>
 </Page>
