--- a/FitnessOsnova_Kam_Dav/Pages/MainPage.xaml
+++ b/FitnessOsnova_Kam_Dav/Pages/MainPage.xaml
@@ -1,14 +1,16 @@
 ﻿<Page x:Class="FitnessOsnova_Kam_Dav.Pages.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FitnessOsnova_Kam_Dav.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPage">
 
-    <Grid>
-        
+    <Grid Background="#f0f0f0">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+            <TextBlock Text="Добро пожаловать!" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+
+            <Button Content="Профиль пользователя" Margin="10" Height="40" Click="UserProfileButton_Click"/>
+            <Button Content="Тренировки" Margin="10" Height="40" Click="TrainingsButton_Click"/>
+            <Button Content="Отзывы" Margin="10" Height="40" Click="FeedbackButton_Click"/>
+            <Button Content="Выход" Margin="10" Height="40" Click="LogoutButton_Click"/>
+        </StackPanel>
     </Grid>
 </Page>
